# pykemon

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
API/: index.html
assets/readme/: index.html
code-examples/: index.html
data-raw/: build_db.py  debug_db.py  insert_all_file.py  read_tables.py  run_db.py  scrape_ability.py  scrape_all_file.py  scrape_item.py  scrape_moves.py  scrape_pokemon.py  scrape_pokemon_abilities.py  scrape_pokemon_moves.py  scrape_pokemon_moves2.py  scrape_static_data.py  test_header.py
data-raw/normalized/: build_normalized.py  pokemon_ability.csv
data-raw/raw/: ability.csv  items.csv  moves.csv  nature.csv  pokemon.csv  status_effect.csv
docs/: API.md
search/: search_index.json
src/pykemon/: __init__.py  __main__.py  battle.py  db.py  pokemon_webscrapper.py  socket_battle.py
src/pykemon/battle/: __init__.py  client.py  damage.py  default_teams.py  models.py  protocol.py  server.py  type_chart.py
